--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
                 </h1>
                 <nav>
                     <ul class="header-nav">
-                        <li class="header-nav__link"><a href="index.html#products"></a>Products</li>
-                        <li class="header-nav__link"><a href="index.html#recomend"></a>Recommend</li>
-                        <li class="header-nav__link"><a href="index.html#concept"></a>Concept</li>
-                        <li class="header-nav__link"><a href="index.html#news"></a>News</li>
-                        <li class="header-nav__link"><a href="index.html#contact"></a>Contact</li>
+                        <li class="header-nav__link"><a href="index.html#products">Products</a></li>
+                        <li class="header-nav__link"><a href="index.html#recommend">Recommend</a></li>
+                        <li class="header-nav__link"><a href="index.html#concept">Concept</a></li>
+                        <li class="header-nav__link"><a href="index.html#news">News</a></li>
+                        <li class="header-nav__link"><a href="index.html#contact">Contact</a></li>
                     </ul>
                 </nav>
                 <div class="sns-link">
